--- a/WorkHours/AndroidManifest.xml
+++ b/WorkHours/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -25,7 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity
+            android:name="com.example.workhours.ShiftFragment"
+            android:label="@string/title_activity_shift" >
+        </activity>
+        <activity
+            android:name="com.example.workhours.ShiftActivity"
+            android:label="@string/title_activity_shift">
+        </activity>
     </application>
 
 </manifest>
+
