--- a/WorkHours/AndroidManifest.xml
+++ b/WorkHours/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <provider
+		    android:name="com.tyczj.extendedcalendarview.CalendarProvider"
+		    android:authorities="com.tyczj.extendedcalendarview.calendarprovider" />
+        
         <activity
             android:name="com.example.workhours.InitScreenActivity"
             android:label="@string/app_name" >
