--- a/WorkHours/project.properties
+++ b/WorkHours/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../../../workspace/appcompat_v7_4
+android.library.reference.1=..\\..\\..\\workspace\\appcompat_v7_4
+android.library.reference.2=../../../workspace/facebook-android-sdk-3.8.0/facebook
