--- a/WorkHours/AndroidManifest.xml
+++ b/WorkHours/AndroidManifest.xml
@@ -16,11 +16,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <provider
-		    android:name="com.tyczj.extendedcalendarview.CalendarProvider"
-		    android:authorities="com.tyczj.extendedcalendarview.calendarprovider" />
-        
+            android:name="com.tyczj.extendedcalendarview.CalendarProvider"
+            android:authorities="com.tyczj.extendedcalendarview.calendarprovider" />
+
         <activity
             android:name="com.example.workhours.InitScreenActivity"
             android:label="@string/app_name" >
@@ -66,6 +65,14 @@
         <activity
             android:name="com.example.workhours.LoginActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.example.workhours.ChangeShiftDialog"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.example.workhours.ChangeShiftActivity"
+            android:label="@string/title_activity_change_shift" >
         </activity>
     </application>
 
