--- a/WorkHours/AndroidManifest.xml
+++ b/WorkHours/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="16"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -81,6 +81,8 @@
             android:name="com.example.workhours.ChangeShiftActivity"
             android:label="@string/title_activity_change_shift" >
         </activity>
+        <service android:name="com.example.workhours.util.ScheduleHandler" >
+   		 </service>
     </application>
 
 </manifest>
