--- a/WorkHours/project.properties
+++ b/WorkHours/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../../../Dropbox/Android/ExtendedCalendarView
-android.library.reference.2=../../../Dropbox/Android/FacebookSDK
+android.library.reference.1=../../../workspace/ExtendedCalendarView
+android.library.reference.2=../../../workspace/facebook-android-sdk-3.8.0/facebook
