--- a/WorkHours/AndroidManifest.xml
+++ b/WorkHours/AndroidManifest.xml
@@ -43,7 +43,11 @@
         </activity>
          <activity
             android:name="com.example.workhours.ProfileActivity"
+            android:parentActivityName="com.example.workhours.MainActivity" 
             android:label="@string/app_name" >
+             <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.example.workhours.MainActivity" />
         </activity>
         <activity
             android:name="com.example.workhours.LoginOptionsActivity"
