--- a/WorkHours/AndroidManifest.xml
+++ b/WorkHours/AndroidManifest.xml
@@ -51,6 +51,7 @@
         </activity>
         <activity
             android:name="com.example.workhours.LoginOptionsActivity"
+            android:noHistory="true"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -60,18 +61,22 @@
         </activity>
         <activity
             android:name="com.example.workhours.SignUpOptionsActivity"
+            android:noHistory="true"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.example.workhours.SignUpEmailActivity"
+            android:noHistory="true"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.example.workhours.Login"
+            android:noHistory="true"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.example.workhours.LoginActivity"
+            android:noHistory="true"
             android:label="@string/app_name" >
         </activity>
         <activity
