--- a/WorkHours/project.properties
+++ b/WorkHours/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../../../workspace/facebook-android-sdk-3.8.0/facebook
+android.library.reference.1=../../../Dropbox/Android/FacebookSDK
 
