--- a/WorkHours/AndroidManifest.xml
+++ b/WorkHours/AndroidManifest.xml
@@ -20,6 +20,8 @@
 
         <activity
             android:name="com.example.workhours.InitScreenActivity"
+            android:windowSoftInputMode="stateHidden"
+         	android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,6 +46,8 @@
          <activity
             android:name="com.example.workhours.ProfileActivity"
             android:parentActivityName="com.example.workhours.MainActivity" 
+            android:windowSoftInputMode="stateHidden"
+         	android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
              <meta-data
             android:name="android.support.PARENT_ACTIVITY"
@@ -51,7 +55,8 @@
         </activity>
         <activity
             android:name="com.example.workhours.LoginOptionsActivity"
-            android:noHistory="true"
+            android:windowSoftInputMode="stateHidden"
+         	android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -61,22 +66,26 @@
         </activity>
         <activity
             android:name="com.example.workhours.SignUpOptionsActivity"
-            android:noHistory="true"
+            android:windowSoftInputMode="stateHidden"
+         	android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.example.workhours.SignUpEmailActivity"
-            android:noHistory="true"
+            android:windowSoftInputMode="stateHidden"
+         	android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.example.workhours.Login"
-            android:noHistory="true"
+            android:windowSoftInputMode="stateHidden"
+         	android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.example.workhours.LoginActivity"
-            android:noHistory="true"
+            android:windowSoftInputMode="stateHidden"
+         	android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
         </activity>
         <activity
